touching up abstract

--- a/ms.tex
+++ b/ms.tex
@@ -171,8 +171,7 @@ orbital period of 33 days.
 We also present two new open-source software packages that enabled this analysis:  
 \texttt{isochrones}, a flexible tool for fitting theoretical stellar 
 models to observational data to determine stellar properties; and 
-\texttt{vespa}, a new general-purpose implementation
-of the \citet{Morton12} procedure to calculate false positive probabilities
+\texttt{vespa}, a new general-purpose procedure to calculate false positive probabilities
 and statistically validate transiting exoplanets.
 \end{abstract}
 
