--- a/ms.tex
+++ b/ms.tex
@@ -542,7 +542,7 @@ and a chance-aligned background(/foreground) eclipsing binary (BEB).
 
 Four of the presented candidates have FPP $>$90\%;
 these are considered to be likely false positives.
-On the other hand, 20 candidates
+On the other hand, 21 candidates
 have FPP $<$ 1\%.  
 Two of these are found to be caused by systematics
 in the transit search noise model (details in \S\ref{sec:systematics}), and
@@ -559,7 +559,8 @@ So in total, of the 36 candidates, 18 are secure planets,
 
 
 We emphasize that the majority of these validations rely
-solely on the transit photometry and SDSS data, with no need for follow-up imaging.  This
+solely on the transit photometry and SDSS data, with follow-up imaging only obtained for
+seven of the 31 targets.  This
 demonstrates the utility of the \texttt{vespa} tool, which will be
 crucial to interpreting future candidates detected by \KT, TESS, and PLATO
 and prioritizing follow-up observing efforts.
