typo in photometry table label

--- a/ms.tex
+++ b/ms.tex
@@ -950,9 +950,9 @@ Campante15}.
 One of the primary goals of \KT\ is the detection of transiting planets around bright stars that
 can be followed up from the ground or with future space-based observatories such as JWST
 \citep{Howell14}.
-Of our sample, two systems orbit stars with $K < 9$: EPIC 201367065 \citep{Crossfield15} and
+Of our sample, two systems orbit stars with $K < 9$ mag: EPIC 201367065 \citep{Crossfield15} and
 EPIC 201912552.
-An additional four targets orbit stars with $K <10$.
+An additional planet candidate may orbit EPIC 201828749, a star with $K = 9.93 \pm 0.03$ mag.
 These targets are ideal for ground-based followup and may be useful targets for Spitzer and
 JWST to probe planetary atmospheres.
 
