--- a/table_photometry.tex
+++ b/table_photometry.tex
@@ -14,7 +14,7 @@
 \colhead{$i_\textrm{APASS}$} &
 \colhead{$J_\textrm{2MASS}$} &
 \colhead{$H_\textrm{2MASS}$} &
-\colhead{$K_\textrm{APASS}$} &
+\colhead{$K_\textrm{2MASS}$} &
 \colhead{W1} &
 \colhead{W2} &
 \colhead{W3}
