--- a/ms.tex
+++ b/ms.tex
@@ -919,8 +919,8 @@ Such a model is currently under development (Angus et al. \textit{in prep}).
 
 
 \subsection{Multiple Planet Systems}
-Five of the systems identified by \paperit\ are candidates to be multiply-transiting
-systems.
+Five of the systems reported by \paperit\ have more than one transiting
+candidate.
 One of these is EPIC 201367065, a three-planet system originally announced by
 \citet{Crossfield15}.
 Another of these is EPIC 201505350 \citep{Armstrong15b}, a two-planet system with the
